--- a/index.html
+++ b/index.html
@@ -15,21 +15,26 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="icons/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex adipisci
-          delectus totam veritatis similique, dignissimos maiores debitis
-          dolores non vero repellat voluptate aspernatur. Voluptas adipisci nisi
-          quidem at atque officiis.
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+        temporibus quidem rerum nisi dolores numquam reiciendis molestias id
+        esse consectetur voluptatem, repudiandae iste itaque magni officiis,
+        quos provident optio nostrum.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="icons/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">John Smith</h3>
+            <p class="quote__company">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
