--- a/index.html
+++ b/index.html
@@ -14,16 +14,39 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <div class="grid grid--cols-2">
-      <div style="background: yellow; height: 100px"></div>
-      <div style="background: dodgerblue; height: 100px"></div>
-    </div>
-    <br />
-    <div class="grid grid--cols-3">
-      <div style="background: yellow; height: 100px"></div>
-      <div style="background: dodgerblue; height: 100px"></div>
-      <div style="background: green; height: 100px"></div>
+  <body style="padding: 5rem">
+    <div class="card testimonial">
+      <div class="grid grid--cols-2">
+        <div class="testimonial__image">
+          <img src="images/testimonial.jpg" alt="A happy smiling customer" />
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href="icons/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quote">
+          <p class="quote__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus temporibus quidem rerum nisi dolores numquam
+            reiciendis molestias id esse consectetur voluptatem, repudiandae
+            iste itaque magni officiis, quos provident optio nostrum.
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use xlink:href="icons/sprite.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title quote__author">John Smith</h3>
+                <p class="quote__company">ABC Company</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
     </div>
   </body>
 </html>
