--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--cols-2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            quia, est blanditiis libero voluptate mollitia dolorum? Fuga,
-            quaerat! Adipisci ipsa praesentium vitae dolorem assumenda odit
-            labore rem temporibus ea cumque.
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon collapsible__chevron">
+          <use xlink:href="icons/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
+        repellat quo ab quaerat officia, sint modi consequatur quod dolor
+        dolorem illum, fugiat minima. Voluptates temporibus natus animi esse rem
+        dignissimos.
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
