--- a/index.html
+++ b/index.html
@@ -15,20 +15,48 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon collapsible__chevron">
-          <use xlink:href="icons/sprite.svg#chevron"></use>
-        </svg>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
+          temporibus, asperiores ad exercitationem, illum a voluptate non ullam
+          cumque cupiditate eius quibusdam tenetur neque quae, accusantium
+          perspiciatis amet quidem. Suscipit.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-        repellat quo ab quaerat officia, sint modi consequatur quod dolor
-        dolorem illum, fugiat minima. Voluptates temporibus natus animi esse rem
-        dignissimos.
+      <div class="plan plan--popular">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% Off</span>
+            <span class="plan__description">Easy start on the cloud</span>
+          </header>
+        </div>
       </div>
-    </div>
+    </section>
+    <section class="block block--dark block--skewed-right">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
+          temporibus, asperiores ad exercitationem, illum a voluptate non ullam
+          cumque cupiditate eius quibusdam tenetur neque quae, accusantium
+          perspiciatis amet quidem. Suscipit.
+        </p>
+      </div>
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <h2 class="block__heading">Heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
+        temporibus, asperiores ad exercitationem, illum a voluptate non ullam
+        cumque cupiditate eius quibusdam tenetur neque quae, accusantium
+        perspiciatis amet quidem. Suscipit.
+      </p>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
