--- a/index.html
+++ b/index.html
@@ -15,48 +15,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
-          temporibus, asperiores ad exercitationem, illum a voluptate non ullam
-          cumque cupiditate eius quibusdam tenetur neque quae, accusantium
-          perspiciatis amet quidem. Suscipit.
-        </p>
-      </header>
-      <div class="plan plan--popular">
-        <div class="card card--secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">10% Off</span>
-            <span class="plan__description">Easy start on the cloud</span>
-          </header>
-        </div>
-      </div>
-    </section>
-    <section class="block block--dark block--skewed-right">
-      <div class="container">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
-          temporibus, asperiores ad exercitationem, illum a voluptate non ullam
-          cumque cupiditate eius quibusdam tenetur neque quae, accusantium
-          perspiciatis amet quidem. Suscipit.
-        </p>
-      </div>
-    </section>
-    <section class="block block--dark block--skewed-left">
-      <h2 class="block__heading">Heading</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
-        temporibus, asperiores ad exercitationem, illum a voluptate non ullam
-        cumque cupiditate eius quibusdam tenetur neque quae, accusantium
-        perspiciatis amet quidem. Suscipit.
-      </p>
-    </section>
+    <nav class="nav collapsible">
+      <a class="nav__brand" href="#"><img src="/icons/logo.svg" alt="" /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="icons/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="">VPS</a></li>
+        <li class="nav__item"><a href="">Domain</a></li>
+        <li class="nav__item"><a href="">Hosting</a></li>
+        <li class="nav__item"><a href="">Pricing</a></li>
+      </ul>
+    </nav>
     <script src="js/main.js"></script>
   </body>
 </html>
