--- a/index.html
+++ b/index.html
@@ -15,17 +15,37 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="block block--dark block--skewed-left hero">
-      <div class="grid grid--cols-2 container">
-        <header class="hero__content block__header">
-          <h1 class="block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">
-            Deploy your websites in less than 60 seconds
-          </p>
-          <a href="" class="btn btn--accent btn--stretched">Get started</a>
-        </header>
-        <img class="hero__image" src="images/banner.png" alt="" />
+    <section class="block container block__domain">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+          fugiat!
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          name=""
+          id=""
+          class="input"
+          placeholder="Enter domain name here"
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="icons/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
       </div>
+      <ul class="list block-domain__prices">
+        <li><span class="badge badge--secondary">.com $9</span></li>
+        <li>.sg $10</li>
+        <li>.space $11</li>
+        <li>.info $14</li>
+        <li>.net $10</li>
+        <li>.xyz $10</li>
+      </ul>
     </section>
     <script src="js/main.js"></script>
   </body>
