--- a/index.html
+++ b/index.html
@@ -15,120 +15,77 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="block container">
+    <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>Host on the Cloud to Keep Growing</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-          eaque.
-        </p>
+        <h2>User-friendly Control Panel</h2>
       </header>
-      <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super asy to use</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            asperiores! Expedita quibusdam vitae iste! Ipsam.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
+      <div class="container grid grid--cols-2">
+        <picture class="block-showcase__image">
           <source
             type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.webp 2x"
+            srcset="images/ipad.jpg 1x, images/ipad@2x.webp 2x"
           />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
+          <img src="images/ipad.png" alt="" />
         </picture>
-      </article>
-      <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply fast websites</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            asperiores! Expedita quibusdam vitae iste! Ipsam.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.webp 2x"
-          />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
-        </picture>
-      </article>
-
-      <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#wordpress"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">WordPress made easy</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            asperiores! Expedita quibusdam vitae iste! Ipsam.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.webp 2x"
-          />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
-        </picture>
-      </article>
-
-      <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#clock"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">24/7 Expert Support</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            asperiores! Expedita quibusdam vitae iste! Ipsam.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.webp 2x"
-          />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
-        </picture>
-      </article>
+        <ul class="list">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="icons/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
+                  adipisci delectus totam veritatis similique, dignissimos
+                  maiores debitis dolores non vero repellat voluptate
+                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="icons/sprite.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
+                  adipisci delectus totam veritatis similique, dignissimos
+                  maiores debitis dolores non vero repellat voluptate
+                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
+                </p>
+              </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="icons/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching & More</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
+                  adipisci delectus totam veritatis similique, dignissimos
+                  maiores debitis dolores non vero repellat voluptate
+                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
+                </p>
+              </div>
+          </li>
+        </ul>
+      </div>
     </section>
     <script src="js/main.js"></script>
   </body>
