--- a/index.html
+++ b/index.html
@@ -15,76 +15,51 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="block block--dark block--skewed-right block-showcase">
+    <section class="block">
       <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
+        <h2>What our customers are saying</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+          incidunt.
+        </p>
       </header>
-      <div class="container grid grid--cols-2">
-        <picture class="block-showcase__image">
-          <source
-            type="image/webp"
-            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="images/ipad.jpg 1x, images/ipad@2x.webp 2x"
-          />
-          <img src="images/ipad.png" alt="" />
-        </picture>
-        <ul class="list">
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#snap"></use>
+      <div class="container">
+        <div class="card testimonial">
+          <div class="grid grid--cols-2">
+            <div class="testimonial__image">
+              <img
+                src="images/testimonial.jpg"
+                alt="A happy smiling customer"
+              />
+              <span class="icon-container icon-container--accent">
+                <svg class="icon icon--white icon--small">
+                  <use xlink:href="icons/sprite.svg#quotes"></use>
                 </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
-                  adipisci delectus totam veritatis similique, dignissimos
-                  maiores debitis dolores non vero repellat voluptate
-                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
-                </p>
-              </div>
+              </span>
             </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#growth"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
-                  adipisci delectus totam veritatis similique, dignissimos
-                  maiores debitis dolores non vero repellat voluptate
-                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
-                </p>
-              </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#wordpress"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Dynamic Caching & More</h3>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex
-                  adipisci delectus totam veritatis similique, dignissimos
-                  maiores debitis dolores non vero repellat voluptate
-                  aspernatur. Voluptas adipisci nisi quidem at atque officiis.
-                </p>
-              </div>
-          </li>
-        </ul>
+            <blockquote class="quote">
+              <p class="quote__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Necessitatibus temporibus quidem rerum nisi dolores numquam
+                reiciendis molestias id esse consectetur voluptatem, repudiandae
+                iste itaque magni officiis, quos provident optio nostrum.
+              </p>
+              <footer>
+                <div class="media">
+                  <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                      <use xlink:href="icons/sprite.svg#line"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__company">ABC Company</p>
+                  </div>
+                </div>
+              </footer>
+            </blockquote>
+          </div>
+        </div>
       </div>
     </section>
     <script src="js/main.js"></script>
