add parcel for building

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="nav collapsible">
         <a class="nav__brand" href="#"><img src="/icons/logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="icons/sprite.svg#menu"></use>
+          <use href="icons/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="">VPS</a></li>
@@ -52,7 +52,7 @@
           />
           <source
             type="image/jpg"
-            srcset="images/banner.jpg 1x, images/banner@2x.webp 2x"
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
           />
           <img class="hero__image" src="images/banner@2x.png" alt="" />
         </picture>
@@ -76,7 +76,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="icons/sprite.svg#search"></use>
+            <use href="icons/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -166,7 +166,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#easy"></use>
+              <use href="icons/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super asy to use</h3>
@@ -192,7 +192,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#computer"></use>
+              <use href="icons/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply fast websites</h3>
@@ -219,7 +219,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#wordpress"></use>
+              <use href="icons/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">WordPress made easy</h3>
@@ -246,7 +246,7 @@
         <div class="feature__content" data-aos="fade-left">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#clock"></use>
+              <use href="icons/sprite.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -281,7 +281,7 @@
           />
           <source
             type="image/jpg"
-            srcset="images/ipad.jpg 1x, images/ipad@2x.webp 2x"
+            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
           />
           <img src="images/ipad.png" alt="" />
         </picture>
@@ -290,7 +290,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#snap"></use>
+                  <use href="icons/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -308,7 +308,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#growth"></use>
+                  <use href="icons/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -325,7 +325,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#wordpress"></use>
+                  <use href="icons/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -356,7 +356,7 @@
               <img src="images/testimonial.jpg" alt="A happy smiling customer" />
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--white icon--small">
-                  <use xlink:href="icons/sprite.svg#quotes"></use>
+                  <use href="icons/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -371,7 +371,7 @@
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--primary quote__line">
-                      <use xlink:href="icons/sprite.svg#line"></use>
+                      <use href="icons/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -391,7 +391,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon collapsible__chevron">
-              <use xlink:href="icons/sprite.svg#chevron"></use>
+              <use href="icons/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -406,7 +406,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon collapsible__chevron">
-              <use xlink:href="icons/sprite.svg#chevron"></use>
+              <use href="icons/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -421,7 +421,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon collapsible__chevron">
-              <use xlink:href="icons/sprite.svg#chevron"></use>
+              <use href="icons/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -436,7 +436,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon collapsible__chevron">
-              <use xlink:href="icons/sprite.svg#chevron"></use>
+              <use href="icons/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
