fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="#"><img src="/icons/logo.svg" alt="" /></a>
+        <a aria-label="Cloudify" class="nav__brand" href="#"><img src="/icons/logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
           <use href="icons/sprite.svg#menu"></use>
         </svg>
@@ -68,6 +68,7 @@
       </header>
       <div class="input-group">
         <input
+        aria-label="Domain"
           type="text"
           name="domain"
           id="domain"
